[metadata]
description-file=README.md
license_files=LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
packages = find:
python_requires = >=3.6